--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
 	<title></title>
 </head>
 <body>
-	hello
+	<!-- Hello JavaScript -->
+	<p>Hello</p>
 	<script src="js/script.js"></script>
 
+	<!-- Variables -->
+	<p>Variables</p>
+	<script>
+		var a;
+		var A;
+		var b = 10;
+		a = 100;
+
+		alert(a);
+
+		var text = "Your Name Here";
+		alert(text);
+
+		var personName;
+
+	</script>
 </body>
 </html>
