--- a/index.html
+++ b/index.html
@@ -22,7 +22,39 @@
 		alert(text);
 
 		var personName;
-
 	</script>
+
+	<!-- Arithmetic Operations -->
+	<p>Arithmetic operations</p>
+	<script>
+	// Addition
+	var a = 1000;
+	var b = a + 200;
+	alert(b);
+
+	//Subtraction
+	var c = 100 - 50;
+	alert(c);
+
+	//Multiplication
+	var m = c * 10;
+	alert(m);
+
+	//Division
+	var d = 500 / 2;
+	alert(d);
+
+	//Mix
+	var combo = (100 + 50) / 2 * 10;
+	alert(combo);
+
+	//Simple calculator
+	//from Celsius to F
+	// ºC x 9/5 + 32 = ºF
+	var C = 25;
+	var F = C * 9/5 + 32;
+	alert(F);
+	</script>
+
 </body>
 </html>
